<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="#3a67b3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="81dp"
        android:background="#234379" />

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <Button
            android:id="@+id/nav4_top_1create"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/nav_top_1create_selected" />

        <TextView
            android:id="@+id/nav4_top_1create_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:layout_alignStart="@+id/nav4_top_1create"
            android:text="@string/create"
            android:textSize="14sp"
            android:textColor="#011069"   />

        <Button
            android:id="@+id/nav4_top_2todolist"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="90dp"
            android:layout_alignTop="@+id/nav4_top_1create"
            android:background="@drawable/nav_top_2todolist_selected" />

        <TextView
            android:id="@+id/nav4_top_2todolist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/nav4_top_1create_text"
            android:layout_alignStart="@+id/nav4_top_2todolist"
            android:text="@string/todos"
            android:textSize="14sp"
            android:textColor="#011069"  />



        <Button
            android:id="@+id/nav4_top_3calendar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="180dp"
            android:layout_alignTop="@+id/nav4_top_1create"
            android:background="@drawable/nav_top_3calendar_selected" />

        <TextView
            android:id="@+id/nav4_top_3calendar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/nav4_top_1create_text"
            android:layout_marginStart="175dp"
            android:text="@string/calendar"
            android:textSize="14sp"
            android:textColor="#011069"  />




        <Button
            android:id="@+id/nav4_top_4settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="270dp"
            android:layout_alignTop="@+id/nav4_top_1create"
            android:background="@drawable/nav_top_4settings" />

        <TextView
            android:id="@+id/nav4_top_4settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/nav4_top_1create_text"
            android:layout_alignStart="@+id/nav4_top_4settings"
            android:text="@string/settings"
            android:textSize="14sp"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/f_create_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            android:text="@string/app_title_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4" />

    </RelativeLayout>



    <ScrollView
        android:id="@+id/about_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="84dp" >

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

        <TextView
            android:id="@+id/settings_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:text="@string/general" />

        <View
            android:id="@+id/settings_line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="35dp"
            android:background="#2196F3" />




        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stgs_langauge_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="@string/language" />


            <TextView
                android:id="@+id/tv_language_icon"
                android:layout_width="45dp"
                android:layout_height="26dp"
                android:layout_marginStart="230dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/btn_lang_en_selected" />


            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="0dp"
                android:foregroundGravity="center"
                android:spinnerMode="dropdown"
                android:background="#ff0000"
                android:gravity="center_vertical"  />



            <TextView
                android:id="@+id/stgs_view_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/stgs_langauge_label"
                android:layout_marginTop="45dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="@string/view_on_todos_screen" />

            <ImageView
                android:id="@+id/stgs_vibra_toggle"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_alignStart="@+id/stgs_langauge_label"
                android:layout_marginTop="115dp"
                android:background="@drawable/toggle_on" />

            <TextView
                android:id="@+id/stgs_vibra_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_alignTop="@+id/stgs_vibra_toggle"
                android:text="@string/use_vibration_feedback"
                android:textColor="#000000"
                android:textSize="16sp" />


            <ImageView
                android:id="@+id/stgs_view_full_radio"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/radio_true" />

            <TextView
                android:id="@+id/stgs_view_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="73dp"
                android:layout_toEndOf="@+id/stgs_view_full_radio"
                android:text="@string/full"
                android:textColor="#000000"
                android:textSize="16sp" />


            <ImageView
                android:id="@+id/stgs_view_compact_radio"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="150dp"
                android:layout_alignTop="@+id/stgs_view_full_radio"
                android:background="@drawable/radio_false" />


            <TextView
                android:id="@+id/stgs_view_compact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_alignTop="@+id/stgs_view_full"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="@string/compact" />



        </RelativeLayout>




        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_appl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:textSize="16sp"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:text="@string/application" />


            <View
                android:id="@+id/settings_line21"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:background="#1D7BC7" />


            <Button
                android:id="@+id/settings_rate_the_app"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:textSize="16sp"
                android:text="@string/rate_the_app"  />


            <Button
                android:id="@+id/settings_more_apps"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="85dp"
                android:textSize="16sp"
                android:text="@string/more_apps"  />


        </RelativeLayout>



        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/settings_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:textSize="16sp"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:text="@string/data" />

            <View
                android:id="@+id/settings_line2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:background="#2196F3" />



            <Button
                android:id="@+id/btn_clear_database"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:text="@string/clear_database" />


            <Button
                android:id="@+id/btn_clear_all_data"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="100dp"
                android:layout_centerHorizontal="true"
                android:textColor="#930803"
                android:text="@string/clear_all_data" />

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>



</RelativeLayout>